--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,6 @@
 <body>
 <h1>Weather Data API</h1>
 <p>url format: http://127.0.0.1:5000/api/v1/station/date</p>
-<p>url example: http://127.0.0.1:5000/api/v1/15/20030827</p>
+<p>url example: http://127.0.0.1:5000/api/v1/15/2003-08-27</p>
 </body>
 </html>
