return weather data for, only any specific station or year

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,8 +6,10 @@
 </head>
 <body>
 <h1>Weather Data API</h1>
-<p>url format: http://127.0.0.1:5000/api/v1/station/date</p>
-<p>url example: http://127.0.0.1:5000/api/v1/15/2003-08-27</p>
+<p>Url Format: http://127.0.0.1:5000/api/v1/station/date</p>
+<p> For 1 Station For A Specific Date: http://127.0.0.1:5000/api/v1/15/2003-08-27</p>
+<p> For 1 Station For All Dates: http://127.0.0.1:5000/api/v1/15</p>
+<p> For 1 Station For 1 Specific Year: http://127.0.0.1:5000/api/v1/yearly/15/2003</p>
 <p>{{data | safe}}</p>
 </body>
 </html>
